# diff-numerics

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: ArgParser.hpp  Formatter.hpp  NumericDiff.hpp  NumericDiffOption.hpp  Printer.hpp  TextParser.hpp
src/: ArgParser.cpp  Formatter.cpp  NumericDiff.cpp  NumericDiffOption.cpp  Printer.cpp  TextParser.cpp  main.cpp
test/: CMakeLists.txt  test-diff-numerics.cpp
